--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,21 +4,21 @@ services:
       context: ./vendor/laravel/sail/runtimes/8.3
       dockerfile: Dockerfile
       args:
-        WWWGROUP: '${WWWGROUP}'
+        WWWGROUP: ${WWWGROUP}
     image: sail-8.3/app
     extra_hosts:
       - 'host.docker.internal:host-gateway'
     environment:
       LARAVEL_SAIL: 1
-      XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
-      XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
-      IGNITION_LOCAL_SITES_PATH: '${PWD}'
-      DB_CONNECTION: '${DB_CONNECTION}'
-      DB_HOST: '${DB_HOST:-pgsql}'
-      DB_PORT: '${DB_PORT}'
-      DB_DATABASE: '${DB_DATABASE}'
-      DB_USERNAME: '${DB_USERNAME}'
-      DB_PASSWORD: '${DB_PASSWORD}'
+      XDEBUG_MODE: ${SAIL_XDEBUG_MODE:-off}
+      XDEBUG_CONFIG: ${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}
+      IGNITION_LOCAL_SITES_PATH: ${PWD}
+      DB_CONNECTION: ${DB_CONNECTION}
+      DB_HOST: ${DB_HOST:-pgsql}
+      DB_PORT: ${DB_PORT}
+      DB_DATABASE: ${DB_DATABASE}
+      DB_USERNAME: ${DB_USERNAME}
+      DB_PASSWORD: ${DB_PASSWORD}
     volumes:
       - '.:/var/www/html'
     networks:
@@ -31,9 +31,9 @@ services:
   pgsql:
     image: 'postgres:17'
     environment:
-      POSTGRES_DB: '${DB_DATABASE}'
-      POSTGRES_USER: '${DB_USERNAME:-root}'
-      POSTGRES_PASSWORD: '${DB_PASSWORD:-root}'
+      POSTGRES_DB: ${DB_DATABASE}
+      POSTGRES_USER: ${DB_USERNAME:-root}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-root}
     volumes:
       - 'sail-pgsql:/var/lib/postgresql/data'
       - './vendor/laravel/sail/database/pgsql/create-testing-database.sql:/docker-entrypoint-initdb.d/10-create-testing-database.sql'
@@ -45,9 +45,9 @@ services:
         - pg_isready
         - '-q'
         - '-d'
-        - '${DB_DATABASE}'
+        - ${DB_DATABASE}
         - '-U'
-        - '${DB_USERNAME:-riit}'
+        - ${DB_USERNAME:-riit}
       retries: 3
       timeout: 5s
 networks:
