--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build && vite build --ssr",
+        "build": "vite build",
         "dev": "vite",
         "lint": "eslint resources/js --ext .js,.vue --ignore-path .gitignore --fix"
     },
